--- a/package.json
+++ b/package.json
@@ -15,18 +15,21 @@
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "postcss": "^8.4.49",
+    "lucide-react": "^0.468.0",
     "prettier": "^3.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
+    "react-social-icons": "^6.18.0",
     "recharts": "^2.15.0",
-    "tailwindcss": "^3.4.16",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "zustand": "^5.0.2"
   },
@@ -36,10 +39,13 @@
     "@types/react": "^18.3.16",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
